// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabList renders correctly > with activeTabId 1`] = `
<div
  className="tabsWrapper compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList"
    role="tablist"
  >
    <li
      aria-controls="tab-list-panel-0"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-0"
      aria-selected={false}
      className="tabWrapper tabListTabWrapper"
      data-testid="tab_tab-list-tab-0"
      data-vibe="Tab"
      id="tab-list-tab-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-0"
      >
        First
      </div>
    </li>
    <li
      aria-controls="tab-list-panel-1"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-1"
      aria-selected={true}
      className="tabWrapper tabListTabWrapper active"
      data-testid="tab_tab-list-tab-1"
      data-vibe="Tab"
      id="tab-list-tab-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-1"
      >
        Second
      </div>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly > with children 1`] = `
<div
  className="tabsWrapper compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList"
    role="tablist"
  >
    <li
      aria-controls="tab-list-panel-0"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-0"
      aria-selected={true}
      className="tabWrapper tabListTabWrapper active"
      data-testid="tab_tab-list-tab-0"
      data-vibe="Tab"
      id="tab-list-tab-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-0"
      >
        First
      </div>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly > with className 1`] = `
<div
  className="tabsWrapper test compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList"
    role="tablist"
  >
    <li
      aria-controls="tab-list-panel-0"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-0"
      aria-selected={true}
      className="tabWrapper tabListTabWrapper active"
      data-testid="tab_tab-list-tab-0"
      data-vibe="Tab"
      id="tab-list-tab-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-0"
      >
        First
      </div>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly > with id 1`] = `
<div
  className="tabsWrapper compact"
  data-testid="tab-list_test"
  id="test"
>
  <ul
    className="tabsList"
    role="tablist"
  >
    <li
      aria-controls="test-panel-0"
      aria-disabled={false}
      aria-labelledby="label-test-tab-0"
      aria-selected={true}
      className="tabWrapper tabListTabWrapper active"
      data-testid="tab_test-tab-0"
      data-vibe="Tab"
      id="test-tab-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-test-tab-0"
      >
        First
      </div>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly > with size 1`] = `
<div
  className="tabsWrapper compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList lg"
    role="tablist"
  >
    <li
      aria-controls="tab-list-panel-0"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-0"
      aria-selected={true}
      className="tabWrapper tabListTabWrapper active"
      data-testid="tab_tab-list-tab-0"
      data-vibe="Tab"
      id="tab-list-tab-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-0"
      >
        First
      </div>
    </li>
    <li
      aria-controls="tab-list-panel-1"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-1"
      aria-selected={false}
      className="tabWrapper tabListTabWrapper"
      data-testid="tab_tab-list-tab-1"
      data-vibe="Tab"
      id="tab-list-tab-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-1"
      >
        Second
      </div>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly > with stretchedUnderline 1`] = `
<div
  className="tabsWrapper compact stretchedUnderline"
  data-testid="tab-list"
>
  <ul
    className="tabsList"
    role="tablist"
  >
    <li
      aria-controls="tab-list-panel-0"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-0"
      aria-selected={true}
      className="tabWrapper tabListTabWrapper active stretchedUnderline"
      data-testid="tab_tab-list-tab-0"
      data-vibe="Tab"
      id="tab-list-tab-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-0"
      >
        First
      </div>
    </li>
    <li
      aria-controls="tab-list-panel-1"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-1"
      aria-selected={false}
      className="tabWrapper tabListTabWrapper stretchedUnderline"
      data-testid="tab_tab-list-tab-1"
      data-vibe="Tab"
      id="tab-list-tab-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-1"
      >
        Second
      </div>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly > with tabType 1`] = `
<div
  className="tabsWrapper stretched"
  data-testid="tab-list"
>
  <ul
    className="tabsList"
    role="tablist"
  >
    <li
      aria-controls="tab-list-panel-0"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-0"
      aria-selected={true}
      className="tabWrapper tabListTabWrapper active"
      data-testid="tab_tab-list-tab-0"
      data-vibe="Tab"
      id="tab-list-tab-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-0"
      >
        First
      </div>
    </li>
    <li
      aria-controls="tab-list-panel-1"
      aria-disabled={false}
      aria-labelledby="label-tab-list-tab-1"
      aria-selected={false}
      className="tabWrapper tabListTabWrapper"
      data-testid="tab_tab-list-tab-1"
      data-vibe="Tab"
      id="tab-list-tab-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <div
        className="tabInner tabListTabInner"
        id="label-tab-list-tab-1"
      >
        Second
      </div>
    </li>
  </ul>
</div>
`;
